turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: object java.awt.Color is not a value
  setCouleurBrosse(Color((dir+1)%(rule.length-1)))
                   ^